--- a/package.json
+++ b/package.json
@@ -17,14 +17,17 @@
     "format": "prettier --write --experimental-cli src/"
   },
   "dependencies": {
+    "@formkit/vue": "^1.7.2",
     "@tailwindcss/vite": "^4.1.18",
+    "@vee-validate/zod": "^4.15.1",
     "element-plus": "^2.13.2",
     "json-server": "^1.0.0-beta.5",
     "pinia": "^3.0.4",
     "tailwindcss": "^4.1.18",
+    "vee-validate": "^4.15.1",
     "vue": "^3.5.27",
-    "vue-formify": "^2.1.1",
-    "vue-router": "^5.0.1"
+    "vue-router": "^5.0.1",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@playwright/test": "^1.58.1",
