--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
     "tailwindcss": "^4.1.18",
     "vee-validate": "^4.15.1",
     "vue": "^3.5.27",
+    "vue-material-design-icons": "^5.3.1",
     "vue-router": "^5.0.1",
-    "zod": "^4.3.6"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@playwright/test": "^1.58.1",
