--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tailwindcss/vite": "^4.1.18",
     "@vee-validate/zod": "^4.15.1",
     "element-plus": "^2.13.2",
+    "idb": "^8.0.3",
     "json-server": "^1.0.0-beta.5",
     "pinia": "^3.0.4",
     "tailwindcss": "^4.1.18",
